@@ -1,4 +1,4 @@
 AUX postinstall-en.txt 29 RMD160 0ea179c06487042967b7ec3040a90c126780c415 SHA1 2ef86db107ee09bd8bc381f5fd7697c0ed6affc9 SHA256 c23ec8868ea88f4407193cf65b4593f36e4903a0450c7219ad85385aa1687c78
-EBUILD danbooru-1.18.0.ebuild 1973 RMD160 93ddf00af38bb054b2dc34ad1a09ef004e050e38 SHA1 166f811fe8165ff67523657c53612582e3c2ae25 SHA256 710ad3f5118991e21229a7d2db89ab48d98f2ac7fabf0e3e3725d5d63af57369
-EBUILD danbooru-9999.ebuild 1973 RMD160 93ddf00af38bb054b2dc34ad1a09ef004e050e38 SHA1 166f811fe8165ff67523657c53612582e3c2ae25 SHA256 710ad3f5118991e21229a7d2db89ab48d98f2ac7fabf0e3e3725d5d63af57369
-MISC ChangeLog 459 RMD160 c22025ec3eb2e85439d07cb0b881b32d1a76990c SHA1 4e01390e7a32005cf521ca45fff78e0bc5d0be12 SHA256 558a4f53c054f0d8c7b36d99554381ae657814500ff5e521513cee770dc40ce2
+EBUILD danbooru-1.18.0.ebuild 1998 RMD160 f9dd19071f3543e95727cd53239a8746e367b9b3 SHA1 a55d91813101c58d72ac0739db19a3222e2a7598 SHA256 6bbf43e0c6c75633f160a9f8238d88779bf8c483d68436d8a6171b8dddca6fb0
+EBUILD danbooru-9999.ebuild 1998 RMD160 f9dd19071f3543e95727cd53239a8746e367b9b3 SHA1 a55d91813101c58d72ac0739db19a3222e2a7598 SHA256 6bbf43e0c6c75633f160a9f8238d88779bf8c483d68436d8a6171b8dddca6fb0
+MISC ChangeLog 556 RMD160 a8f4ed22e1a0bbea8ebed5329366dbb740cf1f1f SHA1 005ffe8600746f902c4da2a2b8971614f249d4e0 SHA256 990cda7f8acc6fc196f30fb40f361eda69a5fe5988e1754b19649085c542e68c
