@@ -1,4 +1,4 @@
 DIST subsonic-4.4-src.zip 8214761 RMD160 fbadab0031221c7a20ff56b526ce6f63a9d79c7b SHA1 f27c30bfa6934c086f1ecce7cef2620564f26598 SHA256 365976466bef3cfa990d779c5ff757f31c9de26990bc2e5e4a7151885efbe229
-EBUILD subsonic-4.4.ebuild 1958 RMD160 30a9bdaa6f037724be774db073e7454e9576168a SHA1 54cf19c578d287264b92c54660259f2afff4e49d SHA256 d6403e4fffecaba62c51ca1e0d9dd14f693a89b5c8a1b4c24930777607ea6bd3
+EBUILD subsonic-4.4.ebuild 1965 RMD160 a8ef4e2eb0afcf249f23eda82518ba6b3cd24884 SHA1 40ce445b9c94e68e88b00579f28c73a8843447bc SHA256 2bdc02a0088f492971a1b35d15d2b5d89f3a53f812caf51ad0f3597a1a48e86b
 MISC ChangeLog 1069 RMD160 c7d379502e0821875248839eedfe64204951bab3 SHA1 3be665806718a55ab034ff834ade45e267375654 SHA256 1ea300b22b9a3fa90714e7dd3af4232defd9707a7da74629dce4cb3d5fe32f4a
 MISC metadata.xml 221 RMD160 52dde43b09fd52c7fca2d101da4536746167b29f SHA1 ce96a105913fc721fb928a0d8216b11fa387b869 SHA256 d114187ee5bb84d05e5d0654deb9148f2b4100c127266eca82b49ba011941616
