@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/danbooru
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  02 Jul 2012; <bapa@gentoo.org> danbooru-1.18.0.ebuild:
+  Added media-libs/gd as a dependency.
 
   14 Feb 2011; Dean Matzkov <bapabooiee@gmail.com> danbooru-1.18.0.ebuild:
   Example configs now get installed in ${PF}.
